--- a/Modulo 3/ex01 - github/aula.html
+++ b/Modulo 3/ex01 - github/aula.html
@@ -20,7 +20,7 @@
             <h2>Exemplos</h2>
             <p> Você tem sua pasta com os arquivos do site e o Git guardando todas as versões dela você vai chamar a pasta com o Git de Repositório Local, o servidor ao invés de ser chamado de GitHub você vai chamar ele de Repositório Remoto, isso é bom para trabalho em equipe, cada um vai ter seu repositório local e atualizar do seu jeito e ele vão poder enviar para o repositório remoto.</p>
             <h2>Primeiro Repositório.</h2>
-            <p></p>
+            <p>para criar um repositório basta você ir no "github desktop" e clicar em "criar novo repositório" e então você coloca o EXATO nome da pasta dos seus arquivos, e em "local path" você coloca um pasta antes da pasta que você quer que seja selecionada.</p>
         </article>  
     </main>
 </body>
