--- a/Modulo 3/ex01 - github/aula.html
+++ b/Modulo 3/ex01 - github/aula.html
@@ -23,6 +23,8 @@
             <p>para criar um repositório basta você ir no "github desktop" e clicar em "criar novo repositório" e então você coloca o EXATO nome da pasta dos seus arquivos, e em "local path" você coloca um pasta antes da pasta que você quer que seja selecionada.</p>
             <h2>Como hospedar um site?</h2>
             <p>para hospedar um site gratuitamente no github,você precisa colocar o seu repositório em estado PUBLICO e então ir nas configurações do repositório e clicar em "pages" e colocar o "branch" em "main" e pronto seu site esta no ar, para acessa-lo você deve colocar o nome do seu perfil + github.com (https://joaopedrojz.github.io) logo em seguida coloque uma "/" e coloque o nome do seu repositório, a partir dai eu recomendo você abrir o arquivo do site no seu PC e copiar a parte do link que vai até o nome do repositório. o link deste site no final fica assim: (https://joaopedrojz.github.io/Relativo-a-aulas/Modulo%203/ex01%20-%20github/aula.html)</p>
+            <h2>Github Social</h2>
+            <p>Para seguir alguém no github é quase a mesma coisa que o facebook, a diferença vem em seguir os repositórios, você pode seguir um repositório, você pode colocar para você ser notificado cada vez que aquele repositório lançar algo, você pode fazer diversas coisas com isso.</p>
         </article>  
     </main>
 </body>
