--- a/Modulo 3/ex01 - github/aula.html
+++ b/Modulo 3/ex01 - github/aula.html
@@ -25,6 +25,8 @@
             <p>para hospedar um site gratuitamente no github,você precisa colocar o seu repositório em estado PUBLICO e então ir nas configurações do repositório e clicar em "pages" e colocar o "branch" em "main" e pronto seu site esta no ar, para acessa-lo você deve colocar o nome do seu perfil + github.com (https://joaopedrojz.github.io) logo em seguida coloque uma "/" e coloque o nome do seu repositório, a partir dai eu recomendo você abrir o arquivo do site no seu PC e copiar a parte do link que vai até o nome do repositório. o link deste site no final fica assim: (https://joaopedrojz.github.io/Relativo-a-aulas/Modulo%203/ex01%20-%20github/aula.html)</p>
             <h2>Github Social</h2>
             <p>Para seguir alguém no github é quase a mesma coisa que o facebook, a diferença vem em seguir os repositórios, você pode seguir um repositório, você pode colocar para você ser notificado cada vez que aquele repositório lançar algo, você pode fazer diversas coisas com isso.</p>
+            <h2>Clonagem de Repositório</h2>
+            <p>você só pode clonar repositórios publicos, para isso vá no perfil a qual tem o repositório que você quer clonar, clique no repositório e clique em "download/clone", selecione a pasta que você quer que fique o repositório e pronto</p>
         </article>  
     </main>
 </body>
