--- a/Modulo 3/ex02 - imagem de fundo/index.html
+++ b/Modulo 3/ex02 - imagem de fundo/index.html
@@ -16,7 +16,7 @@
             <h1>Baixando Imagens</h1>
             <p>Vá nos Repositório do GitHub e baixe as imagens da aula/capitulo, para isso entre no repositório do "Curso em Vídeo" e clique no capitulo que corresponde essa aula e então baixe o arquivo de imagens!</p>
             <h1>Colocando Imagem de Fundo</h1>
-            <p>Para utilizar imagens de fundo você deve usar a tag <code>"Background-Image: url"</code> e colocar a imagem dentro dos parenteses no URL. A imagem vai se repetir até cobrir TODO o local que você pediu, se caso a imagem for muito grande pro espaço que você quer colocar, ela vai mostrar somente uma parte, para você evitar que uma imagem fique se repetindo ou se repetir de um jeito mais especifico use a tag <code>"Background-Repeat"</code> nas seguintes classificações:</p>
+            <p class="outro">Para utilizar imagens de fundo você deve usar a tag <code>"Background-Image: url"</code> e colocar a imagem dentro dos parenteses no URL. A imagem vai se repetir até cobrir TODO o local que você pediu, se caso a imagem for muito grande pro espaço que você quer colocar, ela vai mostrar somente uma parte, para você evitar que uma imagem fique se repetindo ou se repetir de um jeito mais especifico use a tag <code>"Background-Repeat"</code> nas seguintes classificações:</p>
             <ul>
                 <li>Repeat</li>
                 <li>No-Repeat</li>
@@ -24,8 +24,14 @@
                 <li>Repeat-Y</li>
             </ul>
             <img src="imagens/exemplo.png" alt="#">
-            <h1>Lorem </h1>
+            <h1>Background-Size</h1>
+            <p>Com a tag <code>"Background-image"</code> você aumenta e diminui as imagens de fundo sendo a primeira classificação a altura e a segunda largura, você também pode usar o "COVER" para ela cobrir TUDO.</p>
+            <h1>Inline-Block</h1>
+            <p>a tag <code>"display: inline-block"</code>, serve para você colocar uma DIV em INLINE mas que ela continue sendo afetada pelas configurações que um BLOCK seria</p>
         </article>
     </main>
+    <div class="quadrado" id="X"></div>
+    <div class="quadrado" id="X2"></div>
+    <div class="quadrado" id="X3"></div>
 </body>
 </html>
