--- a/Modulo 3/ex02 - imagem de fundo/index.html
+++ b/Modulo 3/ex02 - imagem de fundo/index.html
@@ -23,15 +23,36 @@
                 <li>Repeat-X</li>
                 <li>Repeat-Y</li>
             </ul>
-            <img src="imagens/exemplo.png" alt="#">
-            <h1>Background-Size</h1>
+            <div class="fundo">
+                <img src="imagens/exemplo.png" alt="#">
+            </div>
+            <h1 class="pos">Background-Size</h1>
             <p>Com a tag <code>"Background-image"</code> você aumenta e diminui as imagens de fundo sendo a primeira classificação a altura e a segunda largura, você também pode usar o "COVER" para ela cobrir TUDO.</p>
             <h1>Inline-Block</h1>
             <p>a tag <code>"display: inline-block"</code>, serve para você colocar uma DIV em INLINE mas que ela continue sendo afetada pelas configurações que um BLOCK seria</p>
+            <h1>Background-Position</h1>
+            <p class="outro">Por padrão toda a imagem começa sendo mostrado do canto superior esquerdo, você pode mudar isso se utilizando do <code>"Background-Position"</code>, com essa tag você pode mudar o lugar onde ela começa a ser mostrada sendo canto inferior/superior e esquerdo/direito, você também colocar ela centralizada os comandos são:</p>
+            <ul>
+                <li>Left Top</li>
+                <li>Left Center</li>
+                <li>Left Bottom</li>
+                <li>Center Bottom</li>
+                <li>Right Bottom</li>
+                <li>Right Center</li>
+                <li>Right Top</li>
+                <li>Center Top</li>
+                <li>Center Center</li>
+            </ul>
+            <h1 class="pos"></h1>
         </article>
     </main>
+    <div class="linha"></div>
     <div class="quadrado" id="X"></div>
     <div class="quadrado" id="X2"></div>
     <div class="quadrado" id="X3"></div>
+    <div class="seupai" id="Y1"></div>
+    <div class="seupai" id="Y2"></div>
+    <div class="seupai" id="Y3"></div>
+    <footer>Feito Por João</footer>
 </body>
 </html>
