--- a/Modulo 3/ex02 - imagem de fundo/index.html
+++ b/Modulo 3/ex02 - imagem de fundo/index.html
@@ -27,7 +27,7 @@
                 <img src="imagens/exemplo.png" alt="#">
             </div>
             <h1 class="pos">Background-Size</h1>
-            <p>Com a tag <code>"Background-image"</code> você aumenta e diminui as imagens de fundo sendo a primeira classificação a altura e a segunda largura, você também pode usar o "COVER" para ela cobrir TUDO.</p>
+            <p>Com a tag <code>"Background-image"</code> você aumenta e diminui as imagens de fundo sendo a primeira classificação a altura e a segunda largura, você pode usar o "COVER" para ela cobrir TUDO, a "CONTAIN" vai manter a imagem sem NENHUM corte.</p>
             <h1>Inline-Block</h1>
             <p>a tag <code>"display: inline-block"</code>, serve para você colocar uma DIV em INLINE mas que ela continue sendo afetada pelas configurações que um BLOCK seria</p>
             <h1>Background-Position</h1>
