--- a/Modulo 3/ex02 - imagem de fundo/index.html
+++ b/Modulo 3/ex02 - imagem de fundo/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Aula 2 <br> Modulo 3</h1>
-        <p>Background-Image</p>
+        <p>Configurações de Background</p>
     </header>
     <main>
         <article>
@@ -43,7 +43,18 @@
                 <li>Center Top</li>
                 <li>Center Center</li>
             </ul>
-            <h1 class="pos"></h1>
+            <h1 class="pos">Background-Attachment</h1>
+            <p class="outro">com a tag <code>"Background-attachment"</code> com a especificação "fixed" você pode fixar a imagem em um fundo que não se mexe e que sempre se mantenha na mesma posição da imagem, você pode usar um shorthand de background, ela usa na seguinte ordem:
+            </p>
+            <ol>
+                <li>Color</li>
+                <li>Image</li>
+                <li>Position</li>
+                <li>Repeat</li>
+                <li>Size</li>
+                <li>Attachment</li>
+            </ol>
+            <p><strong>Obs:</strong>O background-size não é aceitado na shorthand, então ela fica na mesma ordem só que sem o size.</p>
         </article>
     </main>
     <div class="linha"></div>
