--- a/Modulo 3/des02/index.html
+++ b/Modulo 3/des02/index.html
@@ -15,7 +15,7 @@
             Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
         </p>
     </header>
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -26,7 +26,8 @@
             Vou dizer tudo em poesia.
         </p>
     </section>
-    <section>
+
+    <section id="um" class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado<br>
@@ -37,7 +38,8 @@
             E um coração desenhado.
         </p>
     </section>
-    <section>
+
+    <section class="normal">
         <p>
             Arroba agora não pesa<br>
             É parte de um endereço<br>
@@ -57,7 +59,8 @@
             Decifre esse rabisco.           
         </p>
     </section>
-    <section>
+
+    <section id="dois" class="imagem">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -68,7 +71,8 @@
             Nas linhas do coração.
         </p>
     </section>
-    <section>
+
+    <section class="normal">
         <p>
             Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
@@ -88,6 +92,7 @@
             Deixe que Deus interprete.          
         </p>
     </section>
+
     <footer>
         <p>Feito e desenvolvido por <a href="https://github.com/JoaopedroJZ" target="_blank" rel="external">João</a></p>
     </footer>
