--- a/Modulo 3/des02/index.html
+++ b/Modulo 3/des02/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section class="normal">
-        <p>
+        <p class="Y">
             Arroba agora não pesa<br>
             É parte de um endereço<br>
             Ponto final nem se usa<br>
@@ -73,7 +73,7 @@
     </section>
 
     <section class="normal">
-        <p>
+        <p class="Y">
             Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
             Mas quando vou prosear<br>
