--- a/Modulo 3/ex03/index.html
+++ b/Modulo 3/ex03/index.html
@@ -15,10 +15,10 @@
     <main>
         <article>
             <h1>
-                Projeto Paralax
+                Tamanho de Letras Adaptivos
             </h1>
             <p>
-                
+                Utilizando-se da medida VIEWPORT ou vw e vh, que no caso são viewport-width e viewport-height, você pode fazer textos "adaptivos" a tamanhos de telas, não é o melhor recurso para se utilizar, porém, quebra um galho, sendo 10vw utilizando-se de 10% da interface do usario em quisito de largura e 10vh 10% da interface do usario em altura. Você também pode usar essa medida para blocos/caixas, porém, como ja dito anteriormente existem recursos melhores.
             </p>
         </article>
     </main>
