--- a/Modulo 3/ex03/index.html
+++ b/Modulo 3/ex03/index.html
@@ -20,6 +20,10 @@
             <p>
                 Utilizando-se da medida VIEWPORT ou vw e vh, que no caso são viewport-width e viewport-height, você pode fazer textos "adaptivos" a tamanhos de telas, não é o melhor recurso para se utilizar, porém, quebra um galho, sendo 10vw utilizando-se de 10% da interface do usario em quisito de largura e 10vh 10% da interface do usario em altura. Você também pode usar essa medida para blocos/caixas, porém, como ja dito anteriormente existem recursos melhores.
             </p>
+            <h1>Como fazer um efeito Paralax?</h1>
+            <p>
+                para fazer um efeito paralax, você deve criar uma div/sessão a qual você vai colocar seu texto, la você coloca uma classe/id e coloque a imagem de fundo que você quer no texto, depois disso coloque um <code>"box-shadow: inset"</code> para usar uma sombra dentro da imagem fazendo um grau de profundidade, lembre-se de colocar o <code>"background-attachment: fixed"</code> e também colocar <code>"background-position"</code> em um angulo a qual a parte da sua imagem que você quer mostra apareceça sempre.
+            </p>
         </article>
     </main>
 </body>
