--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -40,6 +40,12 @@
             </p>
             <h1>Classificação das linhas</h1>
             <p>Você pode classificar os TR (TABLE ROW) e os TD (TABLE DATA), para destacar informações e areas especificas da tabela.</p>
+            <h1>
+                Alinhamento de Tabelas
+            </h1>
+            <p>
+               Para alinhar tabelas você pode utilizar <code>"Text-allign"</code> e especificar alguma posição isso é seu alinhamento orizontal, então como fazer um alinhamento horizontal? use <code>"vertical-allign"</code> o padrão do vertical allign é MIDDLE, diferente do text allign que é LEFT ou CENTER. 
+            </p>
         </article>
     </main>
     <table>
