--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -58,7 +58,12 @@
             <p>
                 Scope é aquilo que contextualiza onde/oque é as tags, se o TITULO esta do LADO ou em CIMA dos DADOS, sendo em cima <code>"Scope=col"</code> e do lado <code>"Scope=row"</code>, isso serve para deixar tudo mais SEMANTICO. Lmebrando que quanto mais semantico mais recomendado o seu site será.
             </p>
-
+            <h1>
+                Efeito Zebrado
+            </h1>
+            <p>
+                O efeito zebrado é normalemnte utilizado para tabelas grandes onde o cerebro humano não consegue localizar completamente um dado, para fazer um efeito zebrado basta você colocar uma cor no "tbody > tr", porém só isso não basta e é por isso que você vai utilizar uma pseudoclasse chamada nth-child(2n), essa tag faz com que você a cada 1 linha deixe o tr com o background color que você especificou, você também pode fazer isso em outras coisas porém a maioria delas você apenas utiliza em tabelas. e é assim que se gera um efeito zebrado. <br> <strong>NOTA: Você também pode colocar o efeito zebrado aparecer a cada 3 ou mais linhas.</strong>
+            </p>
         </article>
     </main>
     <table>
