--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -64,6 +64,10 @@
             <p>
                 O efeito zebrado é normalemnte utilizado para tabelas grandes onde o cerebro humano não consegue localizar completamente um dado, para fazer um efeito zebrado basta você colocar uma cor no "tbody > tr", porém só isso não basta e é por isso que você vai utilizar uma pseudoclasse chamada nth-child(2n), essa tag faz com que você a cada 1 linha deixe o tr com o background color que você especificou, você também pode fazer isso em outras coisas porém a maioria delas você apenas utiliza em tabelas. e é assim que se gera um efeito zebrado. <br> <strong>NOTA: Você também pode colocar o efeito zebrado aparecer a cada 3 ou mais linhas.</strong>
             </p>
+            <h1>Cabeçalho Fixo</h1>
+            <p>
+                Fique ciente que este recurso não funciona em TODOS os navegadores e também que esse efeito SÓ serve se caso a tabela for GRANDE. Para começar sua TABLE precisa ter um position RELATIVO e então você da um caminho de "thead > tr > th" e coloca sua position STCIKY e coloque seu TOP em ZERO (0) e assim basta colocar seu background color padrão e PRONTO.
+            </p>
         </article>
     </main>
     <table>
@@ -117,6 +121,126 @@
             <tr>
                 <td>Pernambuco</td>
                 <td class="number">7 458 102 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="number">12 434 714 </td>
             </tr>
             <tr>
                 <td>Ceará</td>
