--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -68,6 +68,12 @@
             <p>
                 Fique ciente que este recurso não funciona em TODOS os navegadores e também que esse efeito SÓ serve se caso a tabela for GRANDE. Para começar sua TABLE precisa ter um position RELATIVO e então você da um caminho de "thead > tr > th" e coloca sua position STCIKY e coloque seu TOP em ZERO (0) e assim basta colocar seu background color padrão e PRONTO.
             </p>
+            <h1>
+                Mesclagem de Celulas
+            </h1>
+            <p>
+                Para fazer uma mesclagem de celulas você deve saber a base de tabelas,  mesclagens de celulas nada mais é que uma celula ocupar o lugar de duas.   porque isso? simples, para não ficar um espaço em branco em uma tabela. COMO FAZER? você coloca ao lado do td/th <code>"colspan=2"</code>, assim ele vai ocupar DUAS COLUNAS, você pode mudar o numero para ela ocupar mais ou menos colunas. você também pode fazer uma coluna expandir e ocupar mais LINHAS, para isso basta você colocar <code>"rowspan=2"</code> e assim ele vai ocupar 2 LINHAS.
+            </p>
         </article>
     </main>
     <table>
