--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -74,6 +74,12 @@
             <p>
                 Para fazer uma mesclagem de celulas você deve saber a base de tabelas,  mesclagens de celulas nada mais é que uma celula ocupar o lugar de duas.   porque isso? simples, para não ficar um espaço em branco em uma tabela. COMO FAZER? você coloca ao lado do td/th <code>"colspan=2"</code>, assim ele vai ocupar DUAS COLUNAS, você pode mudar o numero para ela ocupar mais ou menos colunas. você também pode fazer uma coluna expandir e ocupar mais LINHAS, para isso basta você colocar <code>"rowspan=2"</code> e assim ele vai ocupar 2 LINHAS.
             </p>
+            <h1>
+                Scopes em Grupos
+            </h1>
+            <p>
+                O "colgroup" ou "rowgroup" são utilizados quando um TH ocupa mais de um span, no caso se você tem um titulo pra definir 3 dados na mesma linha você utiliza esse código.
+            </p>
         </article>
     </main>
     <table>
