--- a/Modulo 3/ex05 - exemplo de tabela/index.html
+++ b/Modulo 3/ex05 - exemplo de tabela/index.html
@@ -14,15 +14,15 @@
             </caption>
             <thead>
                <tr>
-                <th scope="row">Grupo</th >
-                <th scope="row">Nomes</th scope="row">
-                <th colspan="3" scope="row">Filmes</th>
+                <th scope="col">Grupo</th >
+                <th scope="row">Nomes</th scope="col">
+                <th colspan="3" scope="colgroup">Filmes</th>
                </tr>
             </thead>
     
             <tbody>
                 <tr>
-                    <th rowspan="3" scope="col">Mulheres</th>
+                    <th rowspan="3" scope="rowgroup">Mulheres</th>
                     <td>Ana Maria Santos</td>
                     <td>Alien</td>
                     <td>Rambo</td>
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                 <th rowspan="3
-                " scope="col">Homens</th>
+                " scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
