--- a/Modulo 3/des04/index.html
+++ b/Modulo 3/des04/index.html
@@ -7,76 +7,81 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th rowspan="2" class="um" scope="row">ÁREA</th>
-                <th rowspan="2" class="um" scope="row">DISCIPLINAS</th>
-                <th colspan="2" class="um" scope="rowgroup">NOTAS</th>
-                <th rowspan="2" class="um" scope="row">MÉDIA</th>
-            </tr>
-            <tr>
-                <th class="um" scope="row">
-                    NOTA 1
-                </th>
-                <th class="um" scope="row">
-                    NOTA 2
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th rowspan="4" scope="colgroup">EXATAS</th>
-                <td>MATEMATICA</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-            </tr>
-            <tr>
-                <td>FISICA</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-            </tr>
-            <tr>
-                <td>QUIMICA</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-            </tr>
-            <tr>
-                <td>BIOLOGIA</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-            </tr>
-            <tr>
-                <th colspan="4" class="um" id="left" scope="col">MÉDIA DE EXATAS</th>
-                <td class="sim">
-                0.0
-                </td>
-            </tr>
-            <tr>
-                <th rowspan="2" scope="colgroup">
-                    HUMANAS
-                </th>
-                <td>HISTÓRIA</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-            </tr>
-            <tr><td>GEOGRAFIA</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td>
-                <td class="number">0.0</td></tr>
+    <div id="container">
+        <table>
+            <caption>
+                MÉDIA BIMESTRAL
+            </caption>
+            <thead>
                 <tr>
-                    <th colspan="4" class="um" id="left" scope="col">MÉDIA DE HUMANAS</th>
-                    <td class="sim">0.0</td>
+                    <th rowspan="2" class="um" scope="row">ÁREA</th>
+                    <th rowspan="2" class="um" scope="row">DISCIPLINAS</th>
+                    <th colspan="2" class="um" scope="rowgroup">NOTAS</th>
+                    <th rowspan="2" class="um" scope="row">MÉDIA</th>
                 </tr>
-        </tbody>
-        <tfoot>
-            
-        </tfoot>
-    </table>
+                <tr>
+                    <th class="um" scope="row">
+                        NOTA 1
+                    </th>
+                    <th class="um" scope="row">
+                        NOTA 2
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th rowspan="4" scope="colgroup">EXATAS</th>
+                    <td>MATEMATICA</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                </tr>
+                <tr>
+                    <td>FISICA</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                </tr>
+                <tr>
+                    <td>QUIMICA</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                </tr>
+                <tr>
+                    <td>BIOLOGIA</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                </tr>
+                <tr>
+                    <th colspan="4" class="um" id="left" scope="col">MÉDIA DE EXATAS</th>
+                    <td class="sim">
+                    0.0
+                    </td>
+                </tr>
+                <tr>
+                    <th rowspan="2" scope="colgroup">
+                        HUMANAS
+                    </th>
+                    <td>HISTÓRIA</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                </tr>
+                <tr><td>GEOGRAFIA</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td>
+                    <td class="number">0.0</td></tr>
+                    <tr>
+                        <th colspan="4" class="um" id="left" scope="col">MÉDIA DE HUMANAS</th>
+                        <td class="sim">0.0</td>
+                    </tr>
+            </tbody>
+            <tfoot>
+                
+            </tfoot>
+        </table>
+    </div>
 </body>
 </html>
