--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -85,6 +85,8 @@
                 Se é pra modificar uma linha especifica é muito simples, porém o problema vem quando é uma COLUNA, você poderia ir em cada uma delas colocando uma class especifica, mas e se sua tabela tiver 500 linhas? pra fazer isso de maneira rapida basta você criar uma tag chamada "<code>colgroup</code>" a qual você cria dentro da tabela, la você coloca a tag COL e cada uma delas vai automaticamente vincular com as scopes que você colocou no TH <strong>EM ORDEM DE PRIMEIRO E ULTIMO A SER COLOCADO NO CÓDIGO</strong>, para separar cada uma dos cols basta você coloca uma class em cada col que você colocou dentro do colgroup, você também pode utilizar a regra do SPAN para aplicar a mesma class em duas ou mais colunas neste caso você coloca apenas a primeira col de coluna e segunda que seria a qual você quer colocar a mesma configuração você não precisa colocar. Simples facil e rápido <br>
                 <strong>NOTA: O mesmo vale para as linhas porém nesse caso você usa "rowgroup"</strong>
             </p>
+            <h1>Tabelas Responsivas</h1>
+            <p>Para fazer uma tabela responsiva basta você colocar ela dentro de uma div e se caso ela esteja vazando para leteral você coloca overflow-x="auto", se caso esteja vazando para baixo coloque overflow-y="auto", e pronto.</p>
         </article>
     </main>
     <table>
