--- a/Modulo 3/ex04/index.html
+++ b/Modulo 3/ex04/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+
+    
     <header>
         <h1>
             Aula 4
@@ -89,6 +92,7 @@
             <p>Para fazer uma tabela responsiva basta você colocar ela dentro de uma div e se caso ela esteja vazando para leteral você coloca overflow-x="auto", se caso esteja vazando para baixo coloque overflow-y="auto", e pronto.</p>
         </article>
     </main>
+</div>
     <table>
         
         <tr>
