--- a/Modulo 4/ex01/index.html
+++ b/Modulo 4/ex01/index.html
@@ -20,7 +20,10 @@
             <p>
                O que é iframe? o "i" do iframe significa inline, ou seja um frame inline/quadro em linha. O iframe serve para criar uma janela/aba dentro do seu site para mostrar outros sites e videos, apareceram duas especificações, uma de frameborder que quando maior o numero maior a borda e o outro é a src que é o link do site/video que você quer colocar.
             </p>
-            
+            <h1>Ajustando Iframes</h1>
+            <p>
+                Uma coisa importante a se fazer é colocar um link no iframe para se caso haja incompatibilidade apareça o link para assim o leitor não perder nenhum conteudo, você pode ajustar altura e largura, fique ciente que o tamanho padrão é de 300x150 pixeis de tamanho. Nas iframes as css's são soberanas ou seja elas são preferenciais comparadas a css's na própria tag. Você pode configurar um "scolling" que é a rolagem de um iframe que tem as configurações "auto" que é a automatica, "yes" que mesmo que ele ja caiba dentro da caixa ele vai aparecer mesmo assim e por fim "no" que para não ter rolagem. Frame border tem somente 2 especificações que no caso é "0" e "1", para personalizar a borda basta tirar o frame border e colocar a border no css.
+            </p>
         </article>
     </main>
         
