--- a/Modulo 4/ex01/index.html
+++ b/Modulo 4/ex01/index.html
@@ -24,6 +24,10 @@
             <p>
                 Uma coisa importante a se fazer é colocar um link no iframe para se caso haja incompatibilidade apareça o link para assim o leitor não perder nenhum conteudo, você pode ajustar altura e largura, fique ciente que o tamanho padrão é de 300x150 pixeis de tamanho. Nas iframes as css's são soberanas ou seja elas são preferenciais comparadas a css's na própria tag. Você pode configurar um "scolling" que é a rolagem de um iframe que tem as configurações "auto" que é a automatica, "yes" que mesmo que ele ja caiba dentro da caixa ele vai aparecer mesmo assim e por fim "no" que para não ter rolagem. Frame border tem somente 2 especificações que no caso é "0" e "1", para personalizar a borda basta tirar o frame border e colocar a border no css.
             </p>
+            <h1>Iframes Locais</h1>
+            <p>
+                Para você não ter problemas de direito de imagem e coisas do tipo você pode colocar o seu próprio site ou até mesmo o seu conteudo no iframe e isso é um IFRAME LOCAL. <iframe src="../../Modulo 3/des04/index.html" frameborder="0" ></iframe> Esse é um exemplo de iframe local, eu criei essa tabela e agora estou disponibilizando-a nesse site
+            </p>
         </article>
     </main>
         
