--- a/Modulo 4/ex01/index.html
+++ b/Modulo 4/ex01/index.html
@@ -28,8 +28,20 @@
             <p>
                 Para você não ter problemas de direito de imagem e coisas do tipo você pode colocar o seu próprio site ou até mesmo o seu conteudo no iframe e isso é um IFRAME LOCAL. <iframe src="../../Modulo 3/des04/index.html" frameborder="0" ></iframe> Esse é um exemplo de iframe local, eu criei essa tabela e agora estou disponibilizando-a nesse site
             </p>
+            <h1>
+                Navegação de Iframes
+            </h1>
+            <p class="lista">
+                É importante que o diretório do arquivo do iframe local esteja certo, pois se não irá aparecer uma mensagem de erro alegando que o arquivo foi movido. Mudança de iframe com link, para isso você coloca o link doque o usario quer ver, porém no iframe você vai colocar um nome no iframe esse nome estara no seu target="NOMEDOIFRAME", com isso ao clicar no link você vai mudar oque esta sendo exibido no iframe.
+            </p>
+            <ol>
+                <li><a href="../../Modulo 3/ex02 - imagem de fundo/index.html" target="osvaldo">Primeiro</a></li>
+                <li><a href="../../Modulo 3/ex01 - github/aula.html"  target="osvaldo">Segundo</a></li>
+            </ol>
+            <p>
+                <iframe id="nengue" name="osvaldo" src="" frameborder="1"></iframe>
+            </p>
         </article>
     </main>
-        
 </body>
 </html>
